--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -13,9 +13,9 @@ jobs:
     if: github.event.issue.pull_request != null && github.event.comment.body == '/apply'
     runs-on: ubuntu-latest
     env:
-      GH_TOKEN: ${{ github.token }}
-      PULL_REQUEST: ${{ github.event.issue.pull_request }}
-      LOGIN: ${{ github.event.comment.user.login }}
+      GH_TOKEN: "${{ github.token }}"
+      PULL_REQUEST: "${{ github.event.issue.pull_request }}"
+      LOGIN: "${{ github.event.comment.user.login }}"
 
     steps:
       - name: Check if PR can be rebased
