--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ github.token }}
-      PULL_REQUEST: ${{ toJSON(github.event.issue.pull_request) }}
+      PULL_REQUEST: ${{ github.event.issue.pull_request.url }}
       LOGIN: ${{ github.event.comment.user.login }}
 
     steps:
