--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: BSD-3-Clause
+# Copyright (c) 2025 Robin Jarry
+---
 name: Apply PR
 
 on:
@@ -22,9 +25,6 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          repository: ${{ github.event.issue.pull_request.base.repo.full_name }}
-          ref: ${{ github.event.issue.pull_request.base.ref }}
-          fetch-depth: 0 # force fetch all history
           persist-credentials: false
 
-      - run: ./apply.sh
+      - run: .github/workflows/apply.sh
