--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -25,6 +25,8 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
+          fetch-depth: 0
+          fetch-tags: true
           persist-credentials: false
 
       - run: .github/workflows/apply.sh
