--- a/.github/workflows/trailer.yml
+++ b/.github/workflows/trailer.yml
@@ -40,7 +40,7 @@ jobs:
             core.setOutput("number", pr.number);
             console.log("body", context.payload.comment.body)
             const regexp = /(acked|tested)-by:\s+(\w[^<]+\w)\s+<?([a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,})>?/i;
-            const match = context.payload.comment.body.search(regexp);
+            const match = context.payload.comment.body.match(regexp);
             console.log("match", match)
             if (match) {
                 core.setOutput("trailer", `${match[1]}-by: ${match[2]} <${match[3]}>`);
