--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           github-token: ${{ steps.bot.outputs.token }}
+          result-encoding: string
           script: |
             const user = await github.rest.users.getByUsername({username: context.actor});
             if (user.name == null) {
