--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -15,18 +15,11 @@ jobs:
     if: github.event.review.state == 'approved'
     runs-on: ubuntu-latest
     steps:
-      - name: Generate app token
-        uses: actions/create-github-app-token@v2
-        id: bot
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_PRIVATE_KEY }}
-
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
-          token: ${{ steps.bot.outputs.token }}
+          token: ${{ secrets.BOT_TOKEN }}
           fetch-depth: 0
           persist-credentials: false
 
@@ -34,7 +27,7 @@ jobs:
         id: trailer
         uses: actions/github-script@v7
         with:
-          github-token: ${{ steps.bot.outputs.token }}
+          github-token: ${{ secrets.BOT_TOKEN }}
           result-encoding: string
           script: |
             const user = await github.rest.users.getByUsername({username: context.actor});
@@ -61,7 +54,7 @@ jobs:
       - run: .github/workflows/add-trailer.sh
         if: success()
         env:
-          GH_TOKEN: ${{ steps.bot.outputs.token }}
+          GH_TOKEN: ${{ secrets.BOT_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           PR_COMMITS: ${{ github.event.pull_request.commits }}
           HEAD_REF: ${{ github.event.pull_request.head.ref }}
