--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
-          token: ${{ secrets.BOT_TOKEN }}
+          token: ${{ secrets.TRAILER_BOT_TOKEN }}
           fetch-depth: 0
           persist-credentials: false
 
@@ -27,7 +27,7 @@ jobs:
         id: trailer
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.BOT_TOKEN }}
+          github-token: ${{ secrets.TRAILER_BOT_TOKEN }}
           result-encoding: string
           script: |
             const user = await github.rest.users.getByUsername({username: context.actor});
@@ -54,7 +54,7 @@ jobs:
       - run: .github/workflows/add-trailer.sh
         if: success()
         env:
-          GH_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GH_TOKEN: ${{ secrets.TRAILER_BOT_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
           PR_COMMITS: ${{ github.event.pull_request.commits }}
           HEAD_REF: ${{ github.event.pull_request.head.ref }}
