--- a/.github/workflows/trailer.yml
+++ b/.github/workflows/trailer.yml
@@ -16,6 +16,13 @@ jobs:
     if: ${{ github.event.issue.pull_request && (startsWith(github.event.comment.body, 'Acked-by:') || startsWith(github.event.comment.body, 'Tested-by:')) }}
     runs-on: ubuntu-latest
     steps:
+      - name: Check context
+        run: |
+          echo "Event: ${{ github.event_name }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "Base ref: ${{ github.event.pull_request.base.ref }}"
+          echo "Has token: ${{ secrets.TRAILER_BOT_TOKEN != '' }}"
+
       - name: Resolve trailer data
         id: data
         uses: actions/github-script@v7
