--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -15,18 +15,8 @@ jobs:
     if: github.event.review.state == 'approved'
     runs-on: ubuntu-latest
     steps:
-      - name: Check context
-        run: |
-          echo "Event: ${{ github.event_name }}"
-          echo "Actor: ${{ github.actor }}"
-          echo "Base ref: ${{ github.event.pull_request.base.ref }}"
-          echo "Has token: ${{ secrets.TRAILER_BOT_TOKEN != '' }}"
-
       - uses: actions/checkout@v4
         with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
-          token: ${{ secrets.TRAILER_BOT_TOKEN }}
           fetch-depth: 0
           persist-credentials: false
 
@@ -34,8 +24,6 @@ jobs:
         id: trailer
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.TRAILER_BOT_TOKEN }}
-          result-encoding: string
           script: |
             const user = await github.rest.users.getByUsername({username: context.actor});
             if (user.name == null) {
@@ -56,13 +44,16 @@ jobs:
                 process.exit(1);
               }
             }
-            return `Reviewed-by: ${user.name} <${user.email}>`;
-
-      - run: .github/workflows/add-trailer.sh
-        if: success()
-        env:
-          GH_TOKEN: ${{ secrets.TRAILER_BOT_TOKEN }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-          PR_COMMITS: ${{ github.event.pull_request.commits }}
-          HEAD_REF: ${{ github.event.pull_request.head.ref }}
-          TRAILER: ${{ steps.trailer.outputs.result }}
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'add-trailer.yml',
+              ref: 'main',
+              inputs: {
+                pr_number: github.event.pull_request.number,
+                pr_commits: github.event.pull_request.commits,
+                pr_head_repo: github.event.pull_request.head.repo.full_name,
+                pr_head_ref: github.event.pull_request.head.ref,
+                trailer: `Reviewed-by: ${user.name} <${user.email}>`,
+              }
+            });
