--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -8,8 +8,8 @@ on:
     types: [created]
 
 permissions:
-  contents: write
-  pull-requests: write
+  pull-requests: read
+  actions: write
 
 jobs:
   posted:
