--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -20,10 +20,10 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Resolve reviewer name and email
+      - name: Trigger the add-trailer.yml job
         uses: actions/github-script@v7
-        github-token: ${{ secrets.TRAILER_BOT_TOKEN }}
         with:
+          github-token: ${{ secrets.TRAILER_BOT_TOKEN }}
           script: |
             const user = await github.rest.users.getByUsername({username: context.actor});
             if (user.name == null) {
