--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -9,6 +9,7 @@ on:
 
 permissions:
   contents: read
+  actions: write
 
 jobs:
   approved:
@@ -23,12 +24,11 @@ jobs:
       - name: Trigger the add-trailer.yml job
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.TRAILER_BOT_TOKEN }}
           script: |
-            const user = await github.rest.users.getByUsername({username: context.actor});
+            const req = await fetch(`https://api.github.com/users/${context.actor}`);
+            const user = await req.json();
             if (user.name == null) {
-              core.setFailed(`user @${context.actor} does not expose their real name`);
-              process.exit(1);
+              user.name = context.actor;
             }
             if (user.email == null) {
               await exec.exec('sh', ['-c', `git log --pretty=%aE --author="${user.name}" | head -n1`], {
@@ -50,7 +50,6 @@ jobs:
               workflow_id: 'add-trailer.yml',
               ref: 'main',
               inputs: {
-                pr_number: String(github.event.pull_request.number),
                 pr_commits: String(github.event.pull_request.commits),
                 pr_head_repo: github.event.pull_request.head.repo.full_name,
                 pr_head_ref: github.event.pull_request.head.ref,
