--- a/.github/workflows/add-trailer.yml
+++ b/.github/workflows/add-trailer.yml
@@ -52,6 +52,7 @@ jobs:
                 state: 'open',
                 head: branch,
               });
+              console.log(prList);
               if (prList.length === 0) {
                 throw new Error(`No open PR found for branch: ${branch}`)
               }
